# martins-software-i-dj

./: README.md  index.html  package-lock.json  package.json  server.js  start-app.bat  start-app.ps1  tailwind.config.ts  test-audio-engine.cjs  vite.config.ts
cpp/: CMakeLists.txt  audio_engine.cpp  audio_engine.def  audio_engine.h  audio_processor.cpp  audio_processor.h  build_wasm.bat  build_wasm.ps1  build_wasm.sh  wasm_bindings.cpp
electron/: audio-bridge.cjs  main.cjs  preload.js
native/: CMakeLists.txt  package-lock.json  package.json
native/AudioEngine/: AudioEngine.jucer
native/AudioEngine/Builds/VisualStudio2022/: Audio Engine_StaticLibrary.vcxproj  Audio Engine_StaticLibrary.vcxproj.filters  NewProject_StaticLibrary.vcxproj
native/AudioEngine/JuceLibraryCode/: JuceHeader.h
native/src/: binding.cpp  juce_audio_processor.cpp  juce_audio_processor.h
public/: audio-processor.js  audio_processor.js  audio_processor.wasm
scripts/: build-auto.bat
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/components/: ErrorBoundary.tsx
src/components/dj/: AudioWaveform.tsx  ConfigModal.tsx  CrossFader.tsx  DJButton.tsx  DJDeck.tsx  DJFader.tsx  DJInterface.tsx  DJKnob.tsx  KeyMappingSection.tsx  PitchFader.tsx  ScratchWheel.tsx
src/components/ui/: alert-dialog.tsx  chart.tsx  dialog.tsx  drawer.tsx  sheet.tsx  sidebar.tsx
src/contexts/: DJContext.tsx
src/hooks/: useAudioEngine.tsx  useDeckBridge.tsx  useKeyMapping.tsx
src/pages/: Index.tsx
src/services/: AudioService.ts  ConfigService.ts
src/types/: electron.d.ts
